--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -15,7 +15,8 @@ ko:
       user:
         password: 비밀번호
         password_confirmation: 비밀번호 확인
-        
+        name: 이름
+
   date:
     abbr_day_names:
     - 일
